--- a/static/css/index.styl
+++ b/static/css/index.styl
@@ -1,6 +1,7 @@
 #app
   width 100%
   height 100%
+  background #ffffff
   .xiazaiapp
     width 100%
     height 51px
@@ -17,16 +18,44 @@
         >img
           width 100%
     .guide
-        margin-top 20px
-        width 100%
-        height 51px
-        box-sizing border-box
-        background #ffffff
-      .wenzi
-        font-size 13px
-        display block
-        margin top 50px
-        float left
+      color #898989
+      background-color #ffffff
+      font-size 14px
+      width 100%
+      margin-top 10px
+      //box-sizing border-box
+      display flex
+      justify-content space-around
+      height 25px
+      line-height 25px
+      .petcity
+        flex 25%
+        position relative
+        &::before
+          content ''
+          position absolute
+          border 5px solid;
+          border-color:red transparent transparent;
+          right 7px
+          top 5px
+      .searchs
+        flex 60%
+        background #E9E9E9
+        position relative
+        &::before
+          position relative
+          right -20px
+        input
+          box-sizing border-box
+          background #E9E9E9
+          height inherit
+      .msg-box
+        padding-left 15px
+        flex 15%
+        .icon-msg
+          font-size 25px
+          margin-left 5px
+
 
 
 
